--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -53,6 +53,40 @@ ol {
 	padding: 0;
 	margin: 0;
 }
+.flip-container {
+    perspective: 1000px;
+   
+}
+.flipper {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    transition: transform 1.2s; /* Slower flip animation */
+    transform-style: preserve-3d;
+}
+.flip-container:hover .flipper {
+    transform: rotateY(180deg); /* Flip 180 degrees */
+}
+.front, .back {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    backface-visibility: hidden;
+}
+.front {
+    z-index: 2;
+    transform: rotateY(0deg);
+}
+.back {
+    transform: rotateY(180deg);
+}
+.img-rounded, .post-minimal-image {
+    display: block;
+    width: 100%;
+    height: auto;
+}
+
+
 
 ul li,
 ol li {
