--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -4659,7 +4659,7 @@ a.thumbnail-thin {
 .breadcrumbs-custom {
 	position: relative;
 	overflow: hidden;
-	background: url("../images/extrac.jpeg") center;
+	background: url("../images/nmb5_qqq7_211213.jpg") center;
 	background-size: cover;
 }
 
