--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,7 +1,11 @@
 @charset "UTF-8";
 /*
 * Trunk version 2.0.1
+
+
 */
+
+
 a:focus,
 button:focus {
 	outline: none !important;
@@ -85,6 +89,7 @@ ol {
     width: 100%;
     height: auto;
 }
+
 
 
 
@@ -7416,7 +7421,7 @@ html [class*='section-'].section-bottom-0 {
 * Light Backgrounds
 */
 .bg-default {
-	background-color: #FCEFDF;
+	background-color: #ebc08b;
 }
 
 .bg-default:not([style*="background-"]) + .bg-default:not([style*="background-"]) {
@@ -7432,7 +7437,7 @@ html [class*='section-'].section-bottom-0 {
 }
 
 .bg-gray-100 {
-	background-color: #f6f6f6;
+	background-color: #ffcece;
 }
 
 .bg-gray-100:not([style*="background-"]) + .bg-gray-100:not([style*="background-"]) {
